--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           github_user_name: VIASLab
           svg_out_path: dist/github-contribution-grid-snake2.svg
-          snake_color: ''
+          snake_color: '# 8B0000'
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
