--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,9 +14,9 @@ jobs:
       - uses: Sutil/snk@master
         id: snake-gif
         with:
-          github_user_name: VIASLab
+          github_user_name: ${{ github.repository_owner }}
           svg_out_path: dist/github-contribution-grid-snake2.svg
-          snake_color: '# 8B0000'
+          snake_color: 'yellow'
 
       - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
